--- a/activities/1.1-basic-jupyter-notebook.ipynb
+++ b/activities/1.1-basic-jupyter-notebook.ipynb
@@ -18,6 +18,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "87e28e57",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, JupyterLab!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Hello, JupyterLab!')\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0bb6bbdd",
    "metadata": {},
@@ -31,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "f2b4273a",
    "metadata": {},
    "outputs": [
@@ -39,13 +57,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello, JupyterLab!\n"
+      "Im Addagiri Sneha Royal\n"
      ]
     }
    ],
    "source": [
     "# This is a Python code cell\n",
-    "print('Hello, JupyterLab!')"
+    "print('Im Addagiri Sneha Royal')"
    ]
   },
   {
@@ -115,6 +133,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f3938f8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "4a9f2188",
    "metadata": {},
@@ -159,7 +185,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
