--- a/src/3-scatter-plot.ipynb
+++ b/src/3-scatter-plot.ipynb
@@ -14,7 +14,25 @@
    "outputs": [],
    "source": [
     "# TASK: Create a scatter plot with x = [1, 2, 3, 4, 5] and y = [2, 4, 6, 8, 10].\n",
-    "# Annotate each point with its (x, y) value, and set the title as 'Scatter Plot with Annotations'."
+    "# Annotate each point with its (x, y) value, and set the title as 'Scatter Plot with Annotations'.\n",
+    "import matplotlib.pyplot as plt # type: ignore\n",
+    "\n",
+    "# Data\n",
+    "x = [1, 2, 3, 4, 5]\n",
+    "y = [2, 4, 6, 8, 10]\n",
+    "\n",
+    "# Create a scatter plot\n",
+    "plt.scatter(x, y)\n",
+    "\n",
+    "# Annotate each point with its (x, y) value\n",
+    "for i in range(len(x)):\n",
+    "    plt.annotate(f'({x[i]}, {y[i]})', (x[i], y[i]), textcoords=\"offset points\", xytext=(0, 5), ha='center')\n",
+    "\n",
+    "# Add a title\n",
+    "plt.title('Scatter Plot with Annotations')\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()\n"
    ]
   }
  ],
